--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^2.2.1",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.2-beta.28",
+    "qs.js": "^0.1.12",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
@@ -39,9 +43,10 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0-0",
     "lint-staged": "^9.5.0",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3"
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.4",
+    "typescript": "~3.9.3",
+    "vue-cli-plugin-element-plus": "~0.0.13"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
